--- a/index.html
+++ b/index.html
@@ -1,51 +1,17 @@
-<!DOCTYPE html>
-<html lang="tr">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <meta
-      name="description"
-      content="ordaburda - Etkinliklerle bağlanın, toplulukla büyüyün. Çevrenizdeki heyecan verici etkinlikleri keşfedin ve yeni arkadaşlar edinin."
-    />
-    <meta
-      name="keywords"
-      content="etkinlik, sosyal ağ, topluluk, buluşma, etkinlik oluşturma, sosyal bağlantı"
-    />
-    <meta name="author" content="ordaburda Team" />
-
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="ordaburda - anı yaşa, hayatı keşfet" />
-    <meta
-      property="og:description"
-      content="Çevrenizdeki heyecan verici etkinlikleri keşfedin, yeni arkadaşlar edinin ve unutulmaz anılar yaratın."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ordaburda.com" />
-    <meta property="og:image" content="/og-image.jpg" />
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ordaburda - Etkinliklerle Bağlan" />
-    <meta
-      name="twitter:description"
-      content="Sosyal etkinlik deneyiminizi dönüştüren yeni platform çok yakında!"
-    />
-    <meta name="twitter:image" content="/twitter-image.jpg" />
-
-    <!-- Theme Color -->
-    <meta name="theme-color" content="#533B4D" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad:wght@400;700&family=Nunito:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
     <title>ordaburda - anı yaşa, hayatı keşfet</title>
   </head>
+
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+
+    <script type="module" src="/client/App.tsx"></script>
   </body>
 </html>
